[tool.poetry]
name = "terra-proto"
version = "0.1.0"
description = ""
authors = ["Dimitar Petrov <petrov.dimp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"avast.betterproto" = {extras = ["compiler"], version = "^0.2.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
